--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="유튜브 API를 이용하여 나만의 사이트를 만드는 튜토리얼입니다." />
+  <meta name="description" content="유튜브 API를 이용하여 옷 추천을 해주는 사이트입니다." />
   <meta name="keywords" content="포트폴리오, 리액트, react, react.js, 코딩 사이트, 사이트 만들기, 리덕스" />
 
-  <title>Youtube API를 이용한 여행 사이트</title>
+  <title>Youtube API를 이용한 옷 추천 사이트</title>
 </head>
 
 <body>
